# shellshock-trainer

./: Cargo.toml  README.md
src/: main.rs  math.rs
src/platform/: mod.rs  windows.rs
